# pub_utils

./: CLAUDE.md  LICENSE  README.md  assets.json  main.py  pyproject.toml
.claude/: .nfs000000000c0456fe00000139  .nfs000000000c05d3650000013a  .nfs000000000c06c32d0000013e
claudecode/: 2026-01-12.py  2026-01-13.py  2026-01-14.py  2026-01-15.py  2026-01-16.md
connectomes/: neuron_features.csv
data/: assets.json  assets.txt
docs/: molecular_connectome_assembly_plan.md  structural_constraint_plan.md
notebook/: access_RipollSanchez2023_molecular_connectomes.ipynb  access_openworm.ipynb  access_openworm_causal_connectome.ipynb  access_openworm_contactomes.ipynb  access_openworm_molecular_connectome.ipynb  access_openworm_molecular_connectomes.ipynb  access_openworm_structural_connectomes.ipynb  analyze_connectomes.ipynb  analyze_molecular_connectomes.ipynb  assemble_connectomes.ipynb  build_MA_gaba_connectomes.ipynb  build_serotonin_dopamine_gaba_connectomes_from_reporters.ipynb  check_against_RipollSanchez2023_molecular_connectomes.ipynb  check_assembly_against_RipollSanchez2023.ipynb  compare_connectomes.ipynb  constrain_connectomes.ipynb  draft.ipynb  extract_transform_load_data.ipynb  plot_NPP_GPCR_pairing.ipynb  plot_NPP_receptors.ipynb  plot_NT_MA_receptors.ipynb  plot_connectome.ipynb  plot_connectomes.ipynb  plot_molecular_connectomes.ipynb  plot_neuron_features.ipynb
processed/: NPP_Bentley2016.pkl  NPP_connectome_long_range.pkl  NPP_connectome_mid_range.pkl  NPP_connectome_mid_range_FLP-10_DMSR-1.pkl  NPP_connectome_short_range.pkl  neuron_features.pkl  (+5 more)
(+141 files in other folders)
