[project]
name = "pub_utils"
version = "0.1.0"
description = "Extract, Transform and Load publicly available datasets to create visualizations and data objects of standardized formats"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "pip>=25.3",
    "pyreadr>=0.5.4",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "zarr>=2.18.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
